# PythonTemplate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
src/your_package/: __init__.py  core.py
tests/: test_core.py  test_integration.py
